Escrita do conteúdo
Conteúdo

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do Site</title>
+    <title>Título </title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Teste</h1>
         </header>
         <article>
-            <h2>Artigos</h2>
-            <p>Textos Artigo</p>
+            <h2>Artigos Teste 2</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda recusandae quidem nisi sequi aliquam nostrum debitis mollitia esse eveniet, ad, ab consequatur aliquid qui voluptates saepe natus excepturi fugit enim?</p>
         </article>
         <article>
-            <h2>Artigo 2</h2>
-            <p>Textos Artigo 2</p>
+            <h2>Artigo 2 Teste</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quaerat nam corrupti! Numquam fugit repudiandae nobis. Alias dolorum nisi cupiditate ab ea eius reprehenderit, maiores non iste. Non, expedita adipisci.</p>
         </article>
     </main>
 
