--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         </article>
         <article>
             <h2>Artigo 2 Teste</h2>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed explicabo fugit, consequuntur optio aut atque sequi. Ipsa libero incidunt sit reprehenderit harum dignissimos debitis tempore cumque, animi necessitatibus. Quibusdam, explicabo!
+            </p>
             <p> 1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quaerat nam corrupti! Numquam fugit repudiandae nobis. Alias dolorum nisi cupiditate ab ea eius reprehenderit, maiores non iste. Non, expedita adipisci.</p>
         </article>
     </main>
