--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
         <header>
             <h1>Título do Site</h1>
+            <img src="botao.avif"alt="botao voltar"
         </header>
         <article>
             <h2>Artigos</h2>
